<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <DUT Name="ST_Device" Id="{4001509f-3e01-414a-8b61-6f12f1728a19}">
    <Declaration><![CDATA[TYPE ST_Device :
STRUCT
	aDigitalInputIO  	: ARRAY[1..9]OF BYTE; //KL1408 9EA
	aDigitalOutputIO  	: ARRAY[1..4]OF BYTE; //KL2408 4EA
	
	// Analog Input to INT
	aAnalogInputIO 		: ARRAY[1..40]OF INT;
	aAnalogOutputIO 	: ARRAY[1..28]OF INT;
	aAnalogInputIO2 	: ARRAY[1..2]OF UINT;
	//Solenoid Valve
	aOutputSolValve  	: ARRAY[1..2]OF DWORD; //Solenoid Valve 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>